--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test:send-email": "node --loader ts-node/esm scripts/testSendCensusEmail.ts",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepare": "husky"
+    "prepare": "husky",
+    "docs:generate": "typedoc"
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
@@ -32,6 +33,7 @@
     "react-dom": "^19.2.1",
     "react-error-boundary": "^6.0.0",
     "recharts": "^3.5.1",
+    "xlsx-populate": "^1.21.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
@@ -60,6 +62,7 @@
     "storybook": "^10.1.7",
     "tailwindcss": "^4.1.18",
     "ts-node": "^10.9.2",
+    "typedoc": "^0.28.15",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vite-plugin-compression": "^0.5.1",
